# minuet

./: .cmake-format.py  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  COPYING.DOC  Messages.sh  README  README.md  README.packagers  build-android.sh  build-csound-android.sh  commands.txt  configure-csound-android.sh  deploy-android.sh  my.patch  org.kde.minuet.appdata.xml  org.kde.minuet.metainfo.xml  set-android-env.sh  snapcraft.yaml
data/definitions/: CMakeLists.txt  chords-extended-definitions.json  chords-root-position-definitions.json  chords-sevenths-definitions.json  chords-three-notes-definitions.json  intervals-ascending-melodic-definitions.json  intervals-ascending-melodic-harmonic-definitions.json  intervals-descending-melodic-definitions.json  intervals-melodic-definitions.json  rhythm-definitions.json  rhythm-rest-definitions.json  scales-bebop-definitions.json  scales-harmonic-major-and-its-modes-definitions.json  scales-harmonic-minor-and-its-modes-definitions.json  scales-major-and-its-modes-definitions.json  scales-pentatonic-major-and-its-modes-definitions.json  scales-simmetric-definitions.json
data/exercises/: CMakeLists.txt  chords-combined-exercises.json  chords-extended-exercises.json  chords-root-position-exercises.json  chords-sevenths-exercises.json  chords-three-notes-exercises.json  clapping-rhythm-exercises.json  intervals-ascending-melodic-exercises.json  intervals-descending-melodic-exercises.json  intervals-harmonic-exercises.json  intervals-melodic-exercises.json  rhythm-easy-rests.json  rhythm-easy.json  rhythm-medium-rests.json  rhythm-medium.json  scales-bebop-exercises.json  scales-harmonic-major-and-its-modes-exercises.json  scales-harmonic-minor-and-its-modes-exercises.json  scales-major-and-its-modes-exercises.json  scales-pentatonic-major-and-its-modes-exercises.json  scales-simmetric-exercises.json  singing-exercises.json
exercises/: CMakeLists.txt  ascending-melodic-intervals.json  chords-root-position.json  descending-melodic-intervals.json  intervals-ascending-melodic.json  intervals-descending-melodic.json  major-scale-and-its-modes.json  rhythm-easy.json  rhythm-medium.json  scales-major-and-its-modes.json
minuetandroid/: CMakeLists.txt  README
minuetandroid/data/: AndroidManifest.xml
minuetandroid/src/: CMakeLists.txt  main.qml
src/: CMakeLists.txt  exercisecontroller.cpp  exercisecontroller.h  main.cpp  midisequencer.cpp  midisequencer.h  midisequenceroutputthread.cpp  midisequenceroutputthread.h  minuet.cpp  minuet.desktop  minuet.h  minuetSettings.kcfgc  minuetViewBase.ui  minuetsettings.kcfg  minuetsettings.kcfgc  minuetui.rc  minuetview.cpp  minuetview.h  org.kde.minuet.desktop  qml.qrc  settingsBase.ui  settingsgeneral.ui  settingsmidi.ui  song.cpp  song.h  wizard.cpp  wizard.h
src/app/: CMakeLists.txt  clappingexercisecontroller.cpp  clappingexercisecontroller.h  core.cpp  core.h  exercisecatalogcontroller.cpp  exercisecatalogcontroller.h  exercisecontroller.cpp  exercisecontroller.h  exercisesessioncontroller.cpp  exercisesessioncontroller.h  instrumentcatalogcontroller.cpp  instrumentcatalogcontroller.h  interfaceqmltypes.h  main.cpp  mainwindow.cpp  mainwindow.h  midisequencer.cpp  minuet.h  minuetmainwindow.cpp  minuetmainwindow.h  minuetsettings.kcfg  minuetui.rc  org.kde.minuet.desktop  pianokeyboardcontroller.cpp  pianokeyboardcontroller.h  plugincontroller.cpp  plugincontroller.h  qml.qrc  qmltypes.h  settingscontroller.cpp  settingscontroller.h  sheetmusiccontroller.cpp  sheetmusiccontroller.h  singingexercisecontroller.cpp  singingexercisecontroller.h  smuflmetadata.cpp  smuflmetadata.h  uicontroller.cpp  uicontroller.h  (+2 more)
src/app/+android/: qtquickcontrols2.conf
src/app/+windows/: qtquickcontrols2.conf
src/app/android/: AndroidManifest.xml
src/app/autotests/: exerciseevaluationtest.cpp  rhythmresttest.cpp  settingscontrollertest.cpp
src/app/icons/: sc-apps-minuet.svgz
src/app/ios/: LaunchScreen.storyboard  MacOSXBundleInfo.plist.in  iossplashscreen.h  iossplashscreen.mm
src/app/plugins/: CMakeLists.txt  GuitarView.json  PianoView.json
src/app/qml/: AboutDialog.qml  AboutPage.qml  AccuracyMeter.qml  ActionListItem.qml  ExerciseClappingView.qml  ExerciseMenuPage.qml  ExercisePage.qml  ExerciseSingingView.qml  ExerciseView.qml  GraphicalMeter.qml  ImageItemDelegate.qml  Main.qml  MinuetDrawer.qml  MinuetGlobalDrawer.qml  MinuetMenu.qml  MinuetMenuContainer.qml  PracticeModePage.qml  RhythmAnswerView.qml  SettingsPage.qml
src/interfaces/: CMakeLists.txt  icore.cpp  icore.h  iexercisecontroller.cpp  iexercisecontroller.h  imicrophoneinputcontroller.cpp  imicrophoneinputcontroller.h  imidibackend.cpp  imidibackend.h  iplugin.cpp  iplugin.h  iplugincontroller.cpp  iplugincontroller.h  isettingscontroller.cpp  isettingscontroller.h  isoundbackend.cpp  isoundbackend.h  isoundcontroller.cpp  isoundcontroller.h  iuicontroller.cpp  iuicontroller.h
src/plugins/: CMakeLists.txt
src/plugins/aubiomicrophoneinputcontroller/: CMakeLists.txt  aubioanalysisworker.cpp  aubioanalysisworker.h  aubiomicrophoneinputcontroller.cpp  aubiomicrophoneinputcontroller.h  aubiomicrophoneinputcontroller.json
src/plugins/csoundsoundcontroller/: CMakeLists.txt  csengine.cpp  csengine.h  csoundsoundcontroller.cpp  csoundsoundcontroller.h  template.csd  (+2 more)
src/qml/: BlackKey.qml  ExerciseView.qml  Main.qml  MidiPlayer.qml  MinuetButtonStyle.qml  MinuetJSUtils.js  MinuetMenu.qml  MultimediaButton.qml  MultimediaSlider.qml  Octave.qml  PianoView.qml  RhythmAnswerView.qml  WhiteKey.qml  main.qml
src/shell/: CMakeLists.txt  core.cpp  core.h  exercisecontroller.cpp  exercisecontroller.cpp.old  exercisecontroller.h  exercisecontroller.h.old  midisequencer.cpp  midisequencer.h  midisequenceroutputthread.h  minuetmainwindow.cpp  minuetmainwindow.h  minuetsettings.kcfgc  plugincontroller.cpp  plugincontroller.h  settingsmidi.ui  uicontroller.cpp  uicontroller.h  wizard.cpp  wizard.h
src/utils/: CMakeLists.txt  rhythmtoken.h  xdgdatadirs.cpp  xdgdatadirs.h
(+183 files in other folders)
